# control_equipos_backend

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 0bbd98e3773d_fix_buscar_equipos_marca.py  2c65ae33746e_add_reportes_table.py  4aa970dc2c24_creacion_inicial_de_toda_la_base_de_.py  5bb881ed3d35_master_plan_features.py  6cc992fe4e46_migrate_ubicacion_to_uuid.py  83e3bd570973_fix_inventory_trigger_for_uuid_refactor.py  89c1f03dae28_refactor_inventario_a_uuid_ubicacion.py  97d20dc79275_fix_busqueda_global_tecnico_id.py  a86e5b4f8bd7_fix_busqueda_global_marca.py  b3735afa423c_refactor_movimientos_de_equipo_a_uuid_.py  cc5d849bacac_fix_definitivo_buscar_equipos.py  ce69340be793_fix_equipo_search_trigger.py  d34ccb1f8240_add_empleado_model_and_fks_to_equipo_.py  d74c0747cb81_add_tecnicos_mantenimiento_table_and_.py  ea2eec0480b6_normalizacion_marcas_y_departamentos.py
app/: main.py  worker.py
app/api/: deps.py
app/core/: config.py  error_handlers.py  event_broker.py  logging_config.py  password.py  permissions.py  security.py  storage.py
app/db/: base.py  session.py
app/models/: __init__.py  asignacion_licencia.py  audit_log.py  backup_log.py  departamento.py  documentacion.py  empleado.py  equipo.py  equipo_componente.py  estado_equipo.py  inventario_movimiento.py  inventario_stock.py  licencia_software.py  login_log.py  marca.py  (+17 more)
scripts/: create_superuser.py  entrypoint.sh  manage_cli.py  start.ps1  start.sh
tests/: conftest.py
(+131 files in other folders)
